# Yandex_Courses

./: .gitignore  README.md
White_Belt/Week2/: CMakeLists.txt
White_Belt/Week2/map/: Anagrams.cpp  Buses.cpp  Country.cpp
White_Belt/Week2/set/: Buses.cpp  Map_to_set.cpp  Synonyms.cpp  Unique_string.cpp
White_Belt/Week2/vector/: Average_temperature.cpp  Factorial.cpp  MoveStrings.cpp  Palindrom.cpp  PalindromFilter.cpp  Reverse.cpp  Work_Task.cpp
