cmake_minimum_required(VERSION 3.17)
project(Week2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Factorial vector/Factorial.cpp)
add_executable(Palindrom vector/Palindrom.cpp)
add_executable(PalindromFilter vector/PalindromFilter.cpp)
add_executable(MoveStrings vector/MoveStrings.cpp)
add_executable(Reverse vector/Reverse.cpp)
add_executable(Average_temperature vector/Average_temperature.cpp)
add_executable(Queue vector/Queue.cpp)
add_executable(Work_Task vector/Work_Task.cpp)
add_executable(Anagrams map/Anagrams.cpp)
add_executable(Country map/Country.cpp)
add_executable(Bus_stops map/Bus_stops.cpp)
add_executable(Buses map/Buses.cpp)
add_executable(Unique_string set/Unique_string.cpp)
add_executable(Map_to_set set/Map_to_set.cpp)
add_executable(Synonyms set/Synonyms.cpp)
add_executable(Buses_set set/Buses.cpp)